--- a/index.htm
+++ b/index.htm
@@ -138,7 +138,7 @@
                         <th>
                             <span id="keyLeft"></span>
                             <input class="keys" value="Left" type="button" onclick="catchUserChoice(this)"></th>
-                        <th><img src="Images/4ArrowKeys.PNG" height="100" width="150"></th>
+                        <th><img src="Images/4ArrowKeys.png" height="100" width="150"></th>
                         <th>
                             <input class="keys" value="Right" type="button" width="1px" height="10px" onclick="catchUserChoice(this)">
                             <span id="keyRight"></span>
