--- a/index.htm
+++ b/index.htm
@@ -273,7 +273,7 @@
         var pacman_remain = 1;
         monster_count = $('select[name=numMonsters]').val();
         initiateMonsters();
-        movingChar=[19,9,"Images/moving_character.PNG"];
+        movingChar=[19,9,"Images/moving_character.png"];
         start_time = new Date();
         for (var i = 0; i < 20; i++) {
             board[i] = new Array();
@@ -460,7 +460,7 @@
                 }//draw life
                 else if (board[i][j]===6){
                     var img= new Image();
-                    img.src="Images/heart.PNG";
+                    img.src="Images/heart.png";
                     context.drawImage(img,i*60+24,j*60+30,20,20);
                 }
                 //draw moving character
